--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.1",
+    "dotenv": "^16.0.3",
     "mitt": "^3.0.0",
     "node-sass": "^8.0.0",
     "pinia": "^2.0.28",
