Faker install and setup

--- a/api/composer.json
+++ b/api/composer.json
@@ -9,6 +9,7 @@
     "require": {
         "slim/slim": "4.*",
         "slim/psr7": "^1.6",
-        "illuminate/database": "^9.50"
+        "illuminate/database": "^9.50",
+        "fakerphp/faker": "^1.21"
     }
 }
