create basic file distribution

--- a/front/.gitignore
+++ b/front/.gitignore
@@ -9,7 +9,6 @@ lerna-debug.log*
 
 node_modules
 .DS_Store
-dist
 dist-ssr
 coverage
 *.local
@@ -27,3 +26,7 @@ coverage
 *.sln
 *.sw?
 .env
+
+# Dist
+dist/index.html
+dist/assets
