--- a/server-stream/package.json
+++ b/server-stream/package.json
@@ -1,8 +1,9 @@
 {
-  "type" : "module",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
+    "node-fetch": "^3.3.0",
     "path": "^0.12.7",
     "rtcmulticonnection-server": "^1.3.3",
     "socket.io": "^4.6.0",
