Fake data generation class and script (#60)
* Faker install and setup

* Fake user data done

* Professional faker + Resource faker

* FakerGeneration refactoring

* Fixing Resource bug

* User_Resource & User_Group relations

* Resource_Group relation

* Group, Comment, Follow faker done

* Final commit

* Update database and demo version + removing data generation script from index.php

* Commented script required in index + removed db_timezone settings in conf/db.ini & conf/db.ini.example

* prettier

* prettier

* improve coherence

* set real table name

* new faker db

* add default user picture

* Delete scudo_db_demo.sql

---------

Co-authored-by: Bradley BARBIER <bradley.barbier@outlook.fr>

--- a/api/composer.json
+++ b/api/composer.json
@@ -10,6 +10,7 @@
         "slim/slim": "4.*",
         "slim/psr7": "^1.6",
         "illuminate/database": "^9.50",
+        "fakerphp/faker": "^1.21",
         "ramsey/uuid": "^4.7"
     }
 }
